# hello-meson

./: README.md  meson.build  meson_options.txt
lib/: a.c  b.c  linker.lds
scripts/: generate_linker_script.py
src/: hello.c
